# BridgeHop

./: .gitattributes  .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/scripts/: patch-android-signing.py
.github/workflows/: ci.yml  release.yml
crates/bridgehop-cli/: Cargo.toml
crates/bridgehop-cli/src/: main.rs
crates/bridgehop-core/: Cargo.toml
crates/bridgehop-core/src/: error.rs  geo.rs  io.rs  lib.rs  model.rs  paths.rs
crates/bridgehop-core/src/parse/: mod.rs  placeholder.rs
crates/bridgehop-core/src/scan/: fronted.rs  mod.rs  tcp.rs
crates/bridgehop-core/src/scan/deep/: mod.rs  pt.rs  socks.rs
crates/bridgehop-core/src/sources/: builtin.rs  cache.rs  mod.rs
crates/bridgehop-core/src/store/: mod.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
ui/: package-lock.json  package.json  svelte.config.js  vite.config.ts
ui/src/: app.css  app.html
ui/src/lib/: BrandIcon.svelte  Icon.svelte  i18n.svelte.ts  ipc.ts  theme.svelte.ts  update.svelte.ts
ui/src/lib/locales/: azb.json  ckb.json  de.json  en.json  fa.json  fr.json  ru.json  zh.json
ui/src/routes/: +layout.svelte  +layout.ts  +page.svelte
ui/src/routes/about/: +page.svelte
ui/src/routes/history/: +page.svelte
ui/src/routes/settings/: +page.svelte
