[workspace]
resolver = "2"
members = [
    "crates/bridgehop-core",
    "crates/bridgehop-cli",
    "src-tauri",
]
# Plain `cargo build`/`test`/`clippy` target the library and CLI, which don't need the built
# front end. The Tauri app is built explicitly (it embeds ui/build) via `cargo build -p bridgehop-app`.
default-members = [
    "crates/bridgehop-core",
    "crates/bridgehop-cli",
]

[workspace.package]
version = "1.2.6"
edition = "2021"
rust-version = "1.83"
license = "GPL-3.0-or-later"
repository = "https://github.com/center2055/BridgeHop"
authors = ["center2055"]

[workspace.dependencies]
bridgehop-core = { path = "crates/bridgehop-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
regex = "1"
once_cell = "1"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.37", features = ["bundled"] }
directories = "6"
# native-roots: trust the OS certificate store (like OnionHop's .NET client and system browsers),
# so a VPN/AV that does TLS inspection doesn't break fetches. system-proxy: honor the OS proxy.
# Both make reqwest behave like the platform HTTP stack without pulling OpenSSL.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "system-proxy"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "process", "sync", "io-util"] }

# Smallest-binary-first release profile (binary size is BridgeHop's #1 constraint).
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
