[package]
name = "bridgehop-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "BridgeHop desktop application (Tauri shell)."

[lib]
# Required name pattern for the Tauri mobile entry point; main.rs calls into this lib.
name = "bridgehop_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
bridgehop-core = { workspace = true, features = ["qr", "geo", "deep-verify"] }
serde = { workspace = true }
tauri = { version = "2", features = [] }
tokio = { workspace = true }
tokio-util = "0.7"
