[package]
name = "bridgehop-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "BridgeHop desktop application (Tauri shell)."

[lib]
# Required name pattern for the Tauri mobile entry point; main.rs calls into this lib.
name = "bridgehop_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
bridgehop-core = { workspace = true, features = ["qr", "deep-verify"] }
serde = { workspace = true }
tauri = { version = "2", features = [] }
tokio = { workspace = true }
tokio-util = "0.7"
# Native "Save as" dialog for exporting bridge lists. Sync GTK backend on Linux (GTK is already
# linked by Tauri's webkit2gtk), WinAPI backend on Windows; no async runtime pulled in.
rfd = { version = "0.14", default-features = false, features = ["gtk3"] }
