[package]
name = "bridgehop-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core engine for BridgeHop: Tor bridge parsing, reachability scanning, sources, and storage."

[features]
default = []
# Desktop-only: launch real pluggable-transport clients to confirm a handshake.
deep-verify = []
# QR encode/decode for import/export.
qr = []
# MaxMind GeoLite2 country/ASN lookups.
geo = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
tokio = { workspace = true }
tokio-util = "0.7"
# Pure-Rust TLS via the ring provider (no aws-lc-rs C build) — smaller binary, simpler builds.
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
webpki-roots = "0.26"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
